v0.12
	* ADD : revised OSB format. Allows to use large map files directly from disk with low memory footprint.
	* FIX : Native render doesn't render anything at high lat/long values (Closes #1135)
	* FIX : Expand tables in the properties dock to the available width by default (Closes #1136)
	* FIX : make download dialog a less cluttered
	* FIX : update the "created_by" tag at each update, not only add.
	* ADD : Check if there are empty roads/relations during a download and propose to mark them for deletion
	* ADD : "visible" action in layers menu
	* FIX : properly detect if roads are breakable/joinable and update menus accordingly
	* FIX : Handle "NotYetDownloaded" for Relations
	* ADD : scalable POI icons in styles
	* ADD : +/- buttons on zooming slippy map so single button devices can use it too
	* FIX : only activate upload menu when there is something to upload
	* ADD : ability to use svg for node icons
	* ADD : tab filtering and color code to Layer dock
	* FIX : manage road conflicts from downloads
	* ADD : continue road if selected node belongs to only 1 road and is at one end
	* ADD : MRU for opened and imported files
	* ADD : menu option to show/hide a selectable relation bounding box
	* ADD : preference option for focus/hover/relations colors
	* ADD : Create one layer per track during GPX import
	* ADD : Info dock for layers
	* ADD : menu option to show/hide scale
	* ADD : "Duplicate", "Apply", "Up", "Down" functionality to the style editor
	* FIX : another try at solving the "long-ways-at-high-zoom-makes-Merkaartor-unusable" problem (closes #1110)
	* ADD : names rendering in styles
	* ADD : save last download layer to MDCs
	* ADD : switch to integer internal coordinates. Coordinates now vary from -INT_MAX to +INT_MAX rather than -M_PI / +M_PI
	* FIX : 412 when uploading joined/splitted roads
	* ADD : layer menu in menubar
	* ADD : display viewport coordinates in status bar
	* ADD : (almost) generalize progress dialogs